--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -5,6 +5,10 @@
 
 @layer base {
     body {
-        @apply font-sans;
+        @apply font-sans bg-[#333] text-gray-200;
+    }
+
+    section {
+        @apply min-h-screen;
     }
 }
