--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -5,10 +5,17 @@
 
 @layer base {
     body {
-        @apply font-sans bg-[#333] text-gray-200;
+        @apply font-sans text-gray-200 bg-slate-900;
     }
 
     section {
-        @apply min-h-screen;
+        @apply min-h-screen w-[90%] mx-auto;
+    }
+
+    .hash-tag {
+        @apply p-4 text-4xl rounded-2xl w-[300px] mb-4;
+    }
+    .hash-tag-year{
+        @apply  text-xl;
     }
 }
