--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -18,4 +18,10 @@
     .hash-tag-year{
         @apply  text-xl;
     }
+    .title {
+        @apply text-4xl mb-10 relative after:absolute after:left-0 after:-bottom-4 after:content-[''] after:w-[60px] after:h-1 after:bg-yellow-500;
+    }
+    .sub-title {
+        @apply text-xl text-white;
+    }
 }
