--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -9,14 +9,14 @@
     }
 
     section {
-        @apply min-h-screen w-[90%] mx-auto;
+        @apply w-4/5 min-h-screen mx-auto;
     }
 
     .hash-tag {
-        @apply p-4 text-4xl rounded-2xl w-[300px] mb-4;
+        @apply p-4 text-2xl rounded-2xl w-[300px] mb-4;
     }
     .hash-tag-year{
-        @apply  text-xl;
+        @apply  text-lg;
     }
     .title {
         @apply text-4xl mb-10 relative after:absolute after:left-0 after:-bottom-4 after:content-[''] after:w-[60px] after:h-1 after:bg-yellow-500;
